# codeg

./: README.md  package.json
docs/readme/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md  README.zh-TW.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: app_error.rs  app_state.rs  git_credential.rs  git_repo.rs  keyring_store.rs  lib.rs
src-tauri/src/acp/: binary_cache.rs  connection.rs  error.rs  manager.rs  opencode_plugins.rs  preflight.rs  registry.rs  terminal_runtime.rs  types.rs
src-tauri/src/chat_channel/: command_dispatcher.rs  command_handlers.rs  error.rs  event_subscriber.rs  manager.rs  message_formatter.rs  mod.rs  scheduler.rs  session_bridge.rs  session_commands.rs  session_event_subscriber.rs  traits.rs  types.rs
src-tauri/src/chat_channel/backends/: lark.rs  mod.rs  telegram.rs  weixin.rs
src-tauri/src/commands/: acp.rs  chat_channel.rs  conversations.rs  experts.rs  folders.rs  mod.rs  system_settings.rs  terminal.rs  windows.rs
src-tauri/src/db/: error.rs  mod.rs
src-tauri/src/db/entities/: chat_channel.rs  chat_channel_message_log.rs  mod.rs  prelude.rs
src-tauri/src/db/migration/: m20260330_000001_chat_channel.rs  mod.rs
src-tauri/src/db/service/: chat_channel_message_log_service.rs  chat_channel_service.rs  mod.rs
src-tauri/src/models/: chat_channel.rs  mod.rs
src-tauri/src/parsers/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/src/terminal/: manager.rs
src-tauri/src/web/: mod.rs  router.rs
src-tauri/src/web/handlers/: acp.rs  chat_channel.rs  error.rs  mod.rs
src-tauri/src/workspace_state/: mod.rs
src/app/: globals.css  layout.tsx
src/app/commit/: page.tsx
src/app/folder/: layout.tsx
src/app/settings/chat-channels/: page.tsx
src/app/settings/notifications/: page.tsx
src/components/: i18n-provider.tsx
src/components/ai-elements/: file-tree.tsx  link-safety.tsx  message.tsx  reasoning.tsx
src/components/chat/: agent-selector.tsx  chat-input.tsx  conversation-shell.tsx  message-input.tsx  permission-dialog.tsx  welcome-input-panel.tsx
src/components/conversations/: conversation-detail-panel.tsx  sidebar-conversation-card.tsx
src/components/diff/: unified-diff-preview.tsx
src/components/files/: file-workspace-panel.tsx
src/components/layout/: aux-panel-git-log-tab.tsx  commit-dialog.tsx  status-bar-connection.tsx
src/components/project-boot/shadcn/: create-project-dialog.tsx
src/components/settings/: acp-agent-settings.tsx  add-chat-channel-dialog.tsx  appearance-settings.tsx  chat-channel-settings.tsx  notification-settings.tsx  opencode-plugins-modal.tsx  settings-shell.tsx  skills-settings.tsx  system-network-settings.tsx  web-service-settings.tsx
src/contexts/: acp-connections-context.tsx  aux-panel-context.tsx  conversation-runtime-context.tsx  notification-settings-context.tsx  sidebar-context.tsx  terminal-context.tsx  workspace-context.tsx
src/hooks/: use-agent-skills.ts  use-connection-lifecycle.ts  use-connection.ts
src/i18n/: git-error-patterns.ts
src/i18n/messages/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  zh-CN.json  zh-TW.json
src/lib/: api.ts  app-error.ts  notification-settings.ts  notification.ts  permission-request.ts  types.ts
